[🐝] FRDB에 열차 정보가 안올라가는 이슈